Make tables responsive to prevent overflow of table items.

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -21,3 +21,7 @@ body, html {
     height: 100px;
     width: 100px;
 }
+
+.table-sizer {
+    height: auto;
+}
